--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^6.2.3",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
