--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-tooltip": "^4.2.21",
+    "remark-gfm": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
