--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fontend_react",
   "version": "0.1.0",
-  "homepage": "https://www.dontrelldev.com",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@sanity/client": "^2.23.2",
