--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.2.3",
     "node-sass": "^7.0.1",
+    "parse-numeric-range": "^1.3.0",
     "react": "^17.0.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
@@ -18,6 +19,7 @@
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^4.2.21",
     "remark-gfm": "^3.0.1",
     "web-vitals": "^2.1.4"
