--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.57.0",
+    "@react-three/fiber": "^8.11.8",
     "@sanity/client": "^2.23.2",
     "@sanity/image-url": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.2.3",
+    "maath": "^0.5.2",
     "node-sass": "^7.0.1",
     "parse-numeric-range": "^1.3.0",
-    "react": "^17.0.2",
+
     "react-div-100vh": "^0.7.0",
-    "react-dom": "^17.0.2",
+
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
@@ -23,6 +28,7 @@
     "react-tilt": "^0.1.4",
     "react-tooltip": "^4.2.21",
     "remark-gfm": "^3.0.1",
+    "three": "^0.150.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
