--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - npm install 
+      - npm install --legacy-peer-deps
   build:
     commands:
       - npm run build
