--- a/package.json
+++ b/package.json
@@ -14,16 +14,15 @@
     "maath": "^0.5.2",
     "node-sass": "^7.0.1",
     "parse-numeric-range": "^1.3.0",
-
-    "react-div-100vh": "^0.7.0",
-
     "react": "^18.2.0",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-switch": "^7.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-tilt": "^0.1.4",
     "react-tooltip": "^4.2.21",
