changed portfolio domain from dontrelldev.com to dontrell.dev. Updated buildspec.yml, updated logo.

--- a/package.json
+++ b/package.json
@@ -54,5 +54,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://www.dontrelldev.com"
+  "homepage": "https://www.dontrellthedeveloper.com"
 }
