--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
       - npm run build
   post_build:
     commands:
-      - aws cloudfront create-invalidation --distribution-id EA5VDLUL1UM5G --path /\*
+      - aws cloudfront create-invalidation --distribution-id E1X36D6AWUMYF6 --path /\*
 artifacts:
   files:
     - "**/*"
