updated package.json homepage name

--- a/package.json
+++ b/package.json
@@ -54,5 +54,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://www.dontrellthedeveloper.com"
+  "homepage": "https://www.dontrell.dev"
 }
